# BAM

./: .gitignore  CMakeLists.txt  README.md  doc.tex  doxyfile
include/bam/: async.hpp  parallel_copy.hpp  parallel_find.hpp  parallel_for.hpp  parallel_for_each.hpp  parallel_invoke.hpp  parallel_reduce.hpp  parallel_transform.hpp  task_pool.hpp  timer.hpp  utility.hpp
include/bam/detail/: async_impl.hpp  async_task_pool.hpp  benchsuit.hpp  benchsuite.hpp  function_wrapper.hpp  parallel_utility.hpp  semaphore.hpp  work_pool.hpp  work_range.hpp
test/: CMakeLists.txt  Makefile  async_test.cpp  catch.hpp  parallel_copy_test.cpp  parallel_find_test.cpp  parallel_for_each_test.cpp  parallel_for_test.cpp  parallel_invoke_test.cpp  parallel_reduce_test.cpp  parallel_transform_test.cpp  run_test.sh  run_tests.py  task_pool_test.cpp  test_main.cpp  timer_test.cpp
